Adds LoginScreen and related artifacts

--- a/SwiftUIBlueprint/SwiftUIBlueprint/SupportingFiles/Localization/en.lproj/Localizable.strings
+++ b/SwiftUIBlueprint/SwiftUIBlueprint/SupportingFiles/Localization/en.lproj/Localizable.strings
@@ -1,9 +1,3 @@
-/* 
-  Localizable.strings
-  SwiftUIBlueprint
-
-  Created by José Inácio Athayde Ferrarini on 22/11/23.
-  
-*/
-
-"ContentView.WelcomeMessage" = "Good morning, %@!";
+"Login.UsernameField.Title" = "Username";
+"Login.PasswordField.Title" = "Password";
+"Login.LoginButton.Title" = "Login";
