--- a/SwiftUIBlueprint/SwiftUIBlueprint/SupportingFiles/Localization/en.lproj/Localizable.strings
+++ b/SwiftUIBlueprint/SwiftUIBlueprint/SupportingFiles/Localization/en.lproj/Localizable.strings
@@ -1,3 +1,8 @@
+// Login
 "Login.UsernameField.Title" = "Username";
 "Login.PasswordField.Title" = "Password";
 "Login.LoginButton.Title" = "Login";
+
+// Home
+"Home.Title" = "Welcome!";
+"Home.LogoutButton.Title" = "Logout";
